--- a/src/app/main-app.scss
+++ b/src/app/main-app.scss
@@ -1,20 +1,59 @@
 .app-header {
   background-color: #282c34;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  padding: 10px 20px;
   font-size: calc(10px + 2vmin);
   color: white;
 
   small {
     color: green;
   }  
-} 
+}
+
+.nav-bar a.active {
+  background-color: #69C3F7;
+  color: white;
+  text-decoration: none;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.header-content h1 {
+  font-size: 1.2em;
+}
+
+.app-logo {
+  width: 50px; 
+  height: auto;
+}
+
+.nav-bar {
+  display: flex;
+  gap: 35px;
+  overflow: hidden;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-size: 0.8em;
+  transition: color 0.3s;
+
+  &:hover {
+    color: #61dafb;
+  }
+}
 
 .film-item {
- display: flex;
- flex-direction: column;
- padding-left: 20px;
- padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 20px;
 }
